--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,10 +1,12 @@
 /* App */
+
 .app3000 {
     margin-left: 3em;
     margin-right: 3em;
 }
 
 /* Menu superior */
+
 .menu {
     width: 100%;
     float: left;
@@ -29,9 +31,8 @@
 }
 
 /* Menú de filtros*/
-.filter-options {
 
-}
+.filter-options {}
 
 .dropCursos {
     height: 50px;
@@ -76,7 +77,7 @@
     margin-right: 0px;
 }
 
-.cursos-nombre{
+.cursos-nombre {
     height: 60px;
 }
 
@@ -86,18 +87,17 @@
     border: solid 0px;
     font-size: 18px;
     padding-left: 10px;
-    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
 .cursos-nombre input[type="text"]:focus {
     outline: solid 2px #dcdcdc;
 }
 
-.cursos-secciones{
+.cursos-secciones {
     height: 270px;
     padding-top: 10px;
 }
-
 
 .cursos-secciones-left {
     width: 70%;
@@ -109,13 +109,13 @@
     float: left;
 }
 
-.cursos-secciones-contenido{
+.cursos-secciones-contenido {
     width: 100%;
     float: left;
     height: 90%;
 }
 
-.cursos-clases{
+.cursos-clases {
     height: 270px;
     padding-top: 70px;
 }
@@ -130,13 +130,72 @@
     float: left;
 }
 
-.cursos-clases-contenido{
+.cursos-clases-contenido {
     width: 100%;
     float: left;
     height: 90%;
 }
 
+/* Modal para subir archivos */
+
+.modal-container {
+    height: auto;
+}
+
+.drop {
+    height: 30px;
+    width: 200px;
+    margin: 5px;
+    font-size: 10px;
+}
+
+.archivo-submit {
+    text-align: right;
+    height: 60px;
+}
+
+.archivo-submit .generic-button {
+    margin: 10px;
+    margin-right: 0px;
+}
+
+.drag-area {
+    display: inline-block;
+    position: relative;
+    width: calc(100% - 20px);
+    height: 150px;
+    border: .5px;
+    border-radius: 5px;
+    border-style: dashed;
+    padding: 10px;
+}
+
+.drag-area-dragged {
+    background-color: 'rgba(255,255,255,.8)'; 
+    position: 'absolute'; top: 0;
+    bottom: 0; 
+    left: 0; 
+    right: 0; 
+    z-index: 9999;
+}
+
+.drag-area-dragged-top{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 0;
+    text-align: center;
+    color: gray;
+    font-size: 24px;
+}
+
+.drag-tool{
+    text-align: center;
+    padding-bottom: 10px;
+}
+
 /* Botones */
+
 .generic-button {
     height: 50px;
     width: 150px;
@@ -145,6 +204,7 @@
 }
 
 /* Lineas de separacion*/
+
 .encabezado hr {
     height: 1px;
     background-color: black;
