--- a/src/style/App.css
+++ b/src/style/App.css
@@ -142,11 +142,15 @@
     height: auto;
 }
 
+.selects-options {
+    text-align: center;
+}
+
 .drop {
     height: 30px;
-    width: 200px;
+    width: 165px;
     margin: 5px;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .archivo-submit {
