--- a/src/style/App.css
+++ b/src/style/App.css
@@ -230,4 +230,19 @@
     background-color: black;
 }
 
-/* Tablas */
+/* Alert Dialog */
+.dialog-actions {
+    text-align: center;
+}
+
+.dialog-actions .generic-button{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+/* Container de tablas */
+.container {
+    width: 100%;
+    height: 500px;
+    padding-top: 20px;
+}
