--- a/src/style/App.css
+++ b/src/style/App.css
@@ -202,6 +202,10 @@
     width: 150px;
 }
 
+.upload-section{
+    text-align: right;
+}
+
 /* Botones */
 
 .generic-button {
@@ -216,6 +220,14 @@
     width: 50px;
     font-weight: 700;
     font-size: 8px;
+}
+
+.upload-button {
+    height: 30px;
+    width: 150px;
+    font-weight: 700;
+    font-size: 12px;
+    margin-top: 5px;
 }
 
 /* Lineas de separacion*/
@@ -245,4 +257,8 @@
     width: 100%;
     height: 500px;
     padding-top: 20px;
+}
+
+.tables-container {
+    margin-bottom: 100px;
 }
