--- a/Manejador3K_frontend/src/style/App.css
+++ b/Manejador3K_frontend/src/style/App.css
@@ -253,6 +253,24 @@
     margin-top: 5px;
 }
 
+.yes-button{
+    height: 50px;
+    width: 150px;
+    font-weight: 700;
+    font-size: 12px;
+    margin: 10px;
+    margin-right: 5px;
+}
+
+.no-button{
+    height: 50px;
+    width: 150px;
+    font-weight: 700;
+    font-size: 12px;
+    margin: 10px;
+    margin-left: 5px;
+}
+
 /* Lineas de separacion*/
 
 .encabezado hr {
@@ -274,6 +292,14 @@
 .dialog-actions .generic-button {
     margin-top: 30px;
     margin-bottom: 20px;
+}
+
+/* Confirm Dialog */
+.MuiDialogContent-root h5 {
+    margin-top: 0px;
+    margin-bottom: 15px;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 /* Container de tablas */
